# animax

./: README.md  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: publish.yml
src/animax/: __init__.py  __main__.py  anima.py
tests/: README.md  __init__.py  conftest.py  test_anima.py
