[project]
name = "animax"
version = "0.0.1"
description = "Your personal anima foundry"
authors = [
    { name = "Sumuk Shashidhar", email = "sumuks2@illinois.edu" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "langfuse>=2.60.3",
    "litellm>=1.66.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "tenacity>=8.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/sumukshashidhar/animax"
Repository = "https://github.com/sumukshashidhar/animax"

[project.scripts]
animax = "animax.__main__:main" 
